# SimSearchCellar

./: .gitignore  README.md  app.py  eaon_test.py  plot.py  pyproject.toml  sim_search.py
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: CI.yml
data/: actual_temperature.csv  format.py  wanted_temperature.csv  weather_data.csv
src/: __init__.py  sim_search.py
tests/: __init__.py  test_plot.py
