[project]
name = "SimSearchCellar"
version = "0.0.1"

dependencies = [
    "colorlog==6.8.2",
    "numpy",
    "faiss-cpu",
    "pandas",
    "matplotlib"
    ]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
    "tzlocal",
    "pandas-stubs"
    ]

[tool.ruff]
line-length = 127
target-version = "py312"

[tool.ruff.lint]
select = [
    "C90", # mccabe
    "D",   # pydocstyle
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "PL",  # Pylint
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
]
unfixable = [
    "F841", # Do not auto-remove unused variables
]
ignore = [
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
]


[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101"] # Ignore use of assert for test files

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.mypy]
exclude = ["venv", "build"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "-rA --cov-fail-under=50 --cov-report=term --cov=config --cov=src tests/"